# MCP-Netsuite

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml
mocks/: netsuite.json
src/: auth.py  cache.py  logger.py  netsuite_client.py  server.py
tests/: test_client.py
