[project]
name = "mcp-netsuite"
version = "0.1.0"
description = "NetSuite MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "fastapi",
    "uvicorn",
    "requests",
    "python-dotenv",
    "pydantic",
    "httpx",
    "sqlparse>=0.5.3",
    "timeout-decorator>=0.5.0",
]
